[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-tree"
version = "0.1.1"
authors = [
  { name="Umar Farooq", email="your-email@example.com" },
]
description = "A terminal-based tree visualizer for AI agent traces."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "rich>=13.0.0",
    "langchain-core>=0.1.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/umarfarooq478/agent-tree"